--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ dev = [
   "black>=23.12.0",
   "pylint>=3.0.3",
   "mypy>=1.7",
+  "pytest>=7.4.3",
+  "pytest-asyncio>=0.23.2",
+  "hypothesis>=6.92.1",
 ]
 
 [project.urls]
