--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
   "black>=23.12.0",
+  "isort>=5.13.2",
   "pylint>=3.0.3",
   "mypy>=1.7",
   "pytest>=7.4.3",
