--- a/.pylintrc
+++ b/.pylintrc
@@ -431,7 +431,8 @@ disable=raw-checker-failed,
         use-implicit-booleaness-not-comparison-to-string,
         use-implicit-booleaness-not-comparison-to-zero,
         use-symbolic-message-instead,
-        too-few-public-methods
+        too-few-public-methods,
+        format
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
