--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,10 @@ dynamic = ["version", "description"]
 dependencies = [
   "pycognito",
   "awscrt",
-  "awsiotsdk",
   "attrs",
   "dict-deep",
   "aiohttp",
+  "paho-mqtt",
 ]
 requires-python=">=3.11"
 
