Replace existing linters with `ruff`

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,5 @@ extras =
     cli
 commands =
     pytest tests
-    pylint pyupgw tests
     mypy pyupgw tests
-    black --check .
-    isort --check-only .
+    ruff check pyupgw tests
