--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,14 +32,11 @@ requires-python=">=3.11"
 
 [project.optional-dependencies]
 dev = [
-  "black>=23.12.0",
-  "isort>=5.13.2",
-  "pylint>=3.0.3",
+  "ruff>=0.2.2",
   "mypy>=1.7",
   "pytest>=7.4.3",
   "pytest-asyncio>=0.23.2",
   "hypothesis>=6.92.1",
-  "isort>=5.13.2",
   "tox>=4.11.4",
   "types-PyYAML"
 ]
