--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,10 @@ Documentation = "https://pyupgw.readthedocs.io/"
 [project.scripts]
 pyupgw = "pyupgw.__main__:main"
 
+[tool.ruff.lint]
+select = ["I", "F", "W", "E"]
+ignore = ["E501"]
+
 [tool.mypy]
 ignore_missing_imports = true
 
