Add pylint rules to ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ Documentation = "https://pyupgw.readthedocs.io/"
 pyupgw = "pyupgw.__main__:main"
 
 [tool.ruff.lint]
-select = ["I", "F", "W", "E"]
+select = ["I", "F", "W", "E", "PL"]
 ignore = ["E501"]
 
 [tool.mypy]
