--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ requires-python=">=3.11"
 dev = [
   "ruff>=0.2.2",
   "mypy>=1.7",
-  "pytest>=7.4.3",
+  "pytest>=7.4.3,<8",
   "pytest-asyncio>=0.23.2",
   "hypothesis>=6.92.1",
   "tox>=4.11.4",
