--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
   "attrs",
   "dict-deep",
   "aiohttp",
-  "paho-mqtt>2,<3",
+  "paho-mqtt>=2,<3",
 ]
 requires-python=">=3.11"
 
